refactor: post-test cleanup
